--- a/positioning/index.html
+++ b/positioning/index.html
@@ -13,5 +13,6 @@
         <img class="pic3" src="pic_1.jpeg" alt="pic_1" width="300px" height="300px">
         <img class="pic4" src="pic_3.jpeg" alt="pic_1" width="300px" height="300px">
     </div>
+    <div class="box"></div>
 </body>
 </html>
