REVISE : CSS size-units em

--- a/css/size-units/index.html
+++ b/css/size-units/index.html
@@ -18,5 +18,14 @@
    <div class="container">
      some random  text
    </div>
+
+   <p>
+    sample paragraph
+   </p>
+   <div class="parent1">
+    <div class="child1">
+        some text inside the child whose parent has some font-size mentioned and childs font-size is in em
+    </div>
+   </div>
 </body>
 </html>
